# PriceGoblin

./: .gitignore  API_CONTRACT_OVERVIEW.md  DEVELOPMENT.md  PriceGoblin Projektantrag.docx  README.md  REPORTS.md  pyproject.toml
db/: db_model.puml
docs/: API_CONTRACT_OVERVIEW.md  BACKEND_AUTOMATED_TESTING.md  ENDPOINT_TESTING.md  PROJECT_OVERVIEW.md  TODO_NEXT_STEPS.md  USER_MANUAL.md  activity_diagram.puml  class_diagram.puml  db_model.puml  sequence_diagram.puml  state_diagram.puml  use_case.puml
docs/screenshots/user-manual/: README.md
scripts/maintenance/: clear_product_data.py
src/: package-lock.json  package.json
src/backend/: app.py  database.py  locale_utils.py  logging_utils.py  main.py  models.py  price_utils.py  schemas.py
src/backend/routes/: auth.py  products.py  scraper.py  tracking.py
src/frontend/: index.html  package-lock.json  package.json  playwright.config.ts  tsconfig.node.json  vite.config.ts
test/: BACKEND_AUTOMATED_TESTING.md
test/backend/: db_test_case.py  test_category_product_scraper.py  test_locale_utils.py  test_notification_service.py  test_price_utils.py  test_product_service.py  test_url_product_scraper.py
test/protocols/: FRONTEND_TEST_PROTOCOLS.md  backend_test_protocol_2026-03-19.md  backend_test_protocol_2026-03-20.md
test/scripts/: run_backend_tests.py  test_endpoints.sh
uml/: (old version)PriceGoblinUseCase.drawio  activity_diagram.puml  class_diagram.puml  pricegoblindatabase.puml  sequence_diagram.puml  state_diagram.puml  use_case.puml
weeklys/: week0.md  week1.md  week2.md  week3.md  week4.md
(+35 files in other folders)
